<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".RegisterActivityAttendant">

    <EditText
        android:id="@+id/edtDateBirthAttendant"
        android:layout_width="0dp"
        android:layout_height="35dp"
        android:layout_marginStart="55dp"
        android:layout_marginEnd="55dp"
        android:background="@drawable/custom_edt_purple"
        android:ems="10"
        android:hint="@string/hintDateBirth"
        android:inputType="date"
        android:maxEms="8"
        android:maxLength="8"
        android:minEms="8"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.372" />

    <EditText
        android:id="@+id/edtEmailAttendant"
        android:layout_width="0dp"
        android:layout_height="35dp"
        android:layout_marginStart="55dp"
        android:layout_marginEnd="55dp"
        android:background="@drawable/custom_edt_purple"
        android:ems="10"
        android:hint="@string/hintEmail"
        android:inputType="textEmailAddress"
        android:maxEms="37"
        android:maxLength="37"
        android:minEms="7"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.64" />

    <EditText
        android:id="@+id/edtCpfAttendant"
        android:layout_width="0dp"
        android:layout_height="35dp"
        android:layout_marginStart="55dp"
        android:layout_marginEnd="55dp"
        android:background="@drawable/custom_edt_purple"
        android:ems="10"
        android:hint="@string/hintCpf"
        android:inputType="number|numberDecimal"
        android:maxEms="11"
        android:maxLength="11"
        android:minEms="11"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.287" />

    <EditText
        android:id="@+id/edtPasswordAttendant"
        android:layout_width="0dp"
        android:layout_height="35dp"
        android:layout_marginStart="55dp"
        android:layout_marginEnd="55dp"
        android:background="@drawable/custom_edt_purple"
        android:ems="10"
        android:hint="@string/hintPassword"
        android:inputType="textPassword"
        android:maxEms="10"
        android:maxLength="10"
        android:minEms="3"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.727" />

    <EditText
        android:id="@+id/edtFullNameAttendant"
        android:layout_width="0dp"
        android:layout_height="35dp"
        android:layout_marginStart="55dp"
        android:layout_marginEnd="55dp"
        android:background="@drawable/custom_edt_purple"
        android:ems="10"
        android:hint="@string/hintFullName"
        android:inputType="textPersonName"
        android:maxEms="35"
        android:maxLength="35"
        android:minEms="5"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.202" />

    <EditText
        android:id="@+id/edtConfirmPasswordAttendant"
        android:layout_width="0dp"
        android:layout_height="35dp"
        android:layout_marginStart="55dp"
        android:layout_marginEnd="55dp"
        android:background="@drawable/custom_edt_purple"
        android:ems="10"
        android:hint="@string/hintConfirmPassword"
        android:inputType="textPassword"
        android:maxEms="10"
        android:maxLength="10"
        android:minEms="3"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.82" />

    <EditText
        android:id="@+id/edtIdentificationCodeAttendant"
        android:layout_width="0dp"
        android:layout_height="35dp"
        android:layout_marginStart="55dp"
        android:layout_marginEnd="55dp"
        android:background="@drawable/custom_edt_purple"
        android:ems="10"
        android:hint="@string/hintIdentificationCode"
        android:inputType="number|numberDecimal"
        android:maxEms="11"
        android:maxLength="11"
        android:minEms="11"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.553" />

    <EditText
        android:id="@+id/edtPhoneAttendant"
        android:layout_width="0dp"
        android:layout_height="35dp"
        android:layout_marginStart="55dp"
        android:layout_marginEnd="55dp"
        android:background="@drawable/custom_edt_purple"
        android:ems="10"
        android:hint="@string/hintPhone"
        android:inputType="phone"
        android:maxEms="11"
        android:maxLength="11"
        android:minEms="11"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.465" />

    <Button
        android:id="@+id/btnRegisterAttendent"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        android:text="@string/btnRegister"
        app:layout_constraintEnd_toEndOf="@+id/edtConfirmPasswordAttendant"
        app:layout_constraintHorizontal_bias="0.495"
        app:layout_constraintStart_toStartOf="@+id/edtConfirmPasswordAttendant"
        app:layout_constraintTop_toBottomOf="@+id/edtConfirmPasswordAttendant" />


</androidx.constraintlayout.widget.ConstraintLayout>