<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/purple_main"
    tools:context=".LoginActivity">

    <Button
        android:id="@+id/button2"
        android:layout_width="350dp"
        android:layout_height="350dp"
        android:layout_marginBottom="96dp"
        android:background="@drawable/custom_circle_white"
        app:layout_constraintBottom_toTopOf="@+id/edtCpfLogin"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/button"
        android:layout_width="350dp"
        android:layout_height="350dp"
        android:layout_marginBottom="88dp"
        android:background="@drawable/custom_circle_white"
        app:layout_constraintBottom_toTopOf="@+id/edtCpfLogin"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent" />

    <EditText
        android:id="@+id/edtCpfLogin"
        android:layout_width="0dp"
        android:layout_height="45dp"
        android:layout_marginStart="55dp"
        android:layout_marginEnd="55dp"
        android:background="@drawable/custom_edit"
        android:ems="10"
        android:hint="@string/hintCpf"
        android:inputType="textPersonName"
        android:maxLength="11"
        android:textColorHint="#FDF9F9"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.402" />

    <EditText
        android:id="@+id/edtPasswordLogin"
        android:layout_width="0dp"
        android:layout_height="45dp"
        android:layout_marginStart="55dp"
        android:layout_marginEnd="55dp"
        android:background="@drawable/custom_edit"
        android:ems="10"
        android:hint="@string/hintPassword"
        android:inputType="textPersonName"
        android:maxLength="10"
        android:textColor="#FDF9F9"
        android:textColorHint="#FDF9F9"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.543" />

    <Button
        android:id="@+id/btnVerifyLoin"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="48dp"
        android:text="@string/btnVerify"
        app:layout_constraintEnd_toEndOf="@+id/edtPasswordLogin"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/edtPasswordLogin"
        app:layout_constraintTop_toBottomOf="@+id/edtPasswordLogin" />

    <TextView
        android:id="@+id/txtCreateNewAccount"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="87dp"
        android:text="@string/txtCreateNewAccount"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/btnVerifyLoin"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="@+id/btnVerifyLoin"
        app:layout_constraintTop_toBottomOf="@+id/btnVerifyLoin"
        app:layout_constraintVertical_bias="0.108" />

</androidx.constraintlayout.widget.ConstraintLayout>